W-17935419: Encapsulate the TransactionManager - Remove JTA from runtime api (#14261)
* Avoid passing txManager around, only inject it for XA support